(client) Fix content jumping on error and marquee selection for AddGamePage

--- a/client/src/global.css
+++ b/client/src/global.css
@@ -115,7 +115,7 @@ input[type='submit']:active {
 input[type='text'],
 input[type='number'] {
     background: #ffffff;
-    border: 1px solid var(--borders);
+    border: 2px solid var(--borders);
     border-radius: 4px;
     box-shadow: inset 0px 0px 10px #333333;
     color: #692277;
@@ -127,10 +127,10 @@ input[type='number'] {
 
 input[type='text']:focus,
 input[type='number']:focus {
-    outline: none;
     box-shadow: inset 3px 3px 3px var(--borders),
         inset -3px -3px 3px var(--borders),
         inset 0px 0px 20px var(--borders);
+    outline: none;
 }
 
 label {
@@ -138,7 +138,8 @@ label {
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    margin-bottom: 36px;
+    margin-bottom: 40px;
+    position: relative;
 }
 
 nav {
